tests/purs/failing/LacksWithSubGoal.out
Error found:
in module [33mLacksWithSubGoal[0m
at tests/purs/failing/LacksWithSubGoal.purs:14:11 - 14:33 (line 14, column 11 - line 14, column 33)

  No type class instance was found for
  [33m                        [0m
  [33m  Prim.Row.Lacks "hello"[0m
  [33m                 r0     [0m
  [33m                        [0m

while solving type class constraint
[33m                           [0m
[33m  Prim.Row.Lacks "hello"   [0m
[33m                 ( k :: Int[0m
[33m                 | r0      [0m
[33m                 )         [0m
[33m                           [0m
while applying a function [33munion[0m
  of type [33mLacks @Type t1 t2 => S t1 -> R t2[0m
  to argument [33mS[0m
while checking that expression [33munion S[0m
  has type [33mR           [0m
           [33m  ( k :: Int[0m
           [33m  | r0      [0m
           [33m  )         [0m
in value declaration [33mexample[0m

where [33mr0[0m is a rigid type variable
        bound at (line 14, column 11 - line 14, column 33)
      [33mt1[0m is an unknown type
      [33mt2[0m is an unknown type

See https://github.com/purescript/documentation/blob/master/errors/NoInstanceFound.md for more information,
or to contribute content related to this error.

